--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
         header {
             background: linear-gradient(135deg, #8B0000, #ff8c00); /* Maroon to orange for logo-inspired vibrant theme */
             color: white;
-            text-align: center;
             padding: 1.5rem;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            flex-wrap: wrap;
+        }
+        .header-content {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            flex: 1;
+            max-width: 800px;
         }
         .logo {
-            max-width: 200px;
+            max-width: 120px;
             height: auto;
-            margin: 0 auto 1rem;
-            display: block;
             /* Upload your logo image as 'logo.png' and place it in the same folder as this HTML */
+        }
+        .header-text {
+            flex: 1;
+            text-align: center;
         }
         header h1 {
             margin: 0 0 0.5rem;
@@ -35,6 +47,22 @@
         header p {
             margin: 0;
             font-size: 1.1rem;
+        }
+        .social-links {
+            display: flex;
+            gap: 0.5rem;
+        }
+        .social-link {
+            color: white;
+            text-decoration: none;
+            padding: 0.5rem;
+            border-radius: 50%;
+            background: rgba(255,255,255,0.2);
+            transition: background 0.3s ease;
+            font-size: 1.2rem;
+        }
+        .social-link:hover {
+            background: rgba(255,255,255,0.3);
         }
         .highlight {
             background-color: #fff3cd;
@@ -69,6 +97,8 @@
             max-width: 320px;
             text-align: center;
             transition: transform 0.3s ease;
+            display: flex;
+            flex-direction: column;
         }
         .location:hover {
             transform: translateY(-5px);
@@ -80,6 +110,12 @@
         }
         .location p {
             margin-bottom: 1rem;
+        }
+        .map-container {
+            height: 200px;
+            margin: 1rem 0;
+            border-radius: 8px;
+            overflow: hidden;
         }
         .ordering-link {
             display: inline-block;
@@ -122,28 +158,44 @@
             margin: 1rem 0;
             border-radius: 8px;
             font-size: 0.9rem;
+            flex-grow: 1;
         }
         .specials {
             background: #fff3e0;
             padding: 2rem;
             text-align: center;
             margin: 2rem;
+            overflow: hidden;
         }
         .specials h2 {
             color: #8B0000; /* Maroon */
             font-size: 1.8rem;
         }
         .specials-content {
+            display: flex;
+            animation: autoScroll 30s linear infinite; /* Auto-scroll: 30s duration, linear, infinite loop */
             max-width: 800px;
             margin: 0 auto;
             line-height: 1.6;
+            gap: 1rem;
+            padding: 1rem 0;
+        }
+        @keyframes autoScroll {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-50%); } /* Assumes duplicated content for seamless loop */
+        }
+        .specials-content:hover {
+            animation-play-state: paused; /* Pause on hover */
         }
         .special-item {
+            display: inline-block;
             background: white;
             padding: 1rem;
-            margin: 1rem 0;
             border-radius: 8px;
             border-left: 4px solid #ff8c00;
+            min-width: 250px;
+            vertical-align: top;
+            flex-shrink: 0; /* Prevent shrinking with Flexbox */
         }
         footer {
             background: #8B0000; /* Maroon footer */
@@ -159,25 +211,45 @@
         @media (min-width: 769px) {
             header h1 { font-size: 2.5rem; }
             .location { width: 300px; }
+            .header-content { justify-content: center; }
         }
         @media (max-width: 768px) {
-            header { padding: 1rem; }
+            header { 
+                flex-direction: column; 
+                text-align: center;
+                padding: 1rem;
+            }
+            .header-content { justify-content: center; width: 100%; }
+            .social-links { justify-content: center; margin-top: 0.5rem; width: 100%; }
             .locations { flex-direction: column; align-items: center; gap: 1rem; padding: 1rem; }
             .location { max-width: 100%; width: auto; }
             .highlight { margin: 1rem; padding: 1rem; }
             .specials { margin: 1rem; padding: 1.5rem; }
+            .specials-content { 
+                animation-duration: 20s; /* Faster on mobile */
+            }
         }
         @media (max-width: 480px) {
             header h1 { font-size: 1.8rem; }
-            .logo { max-width: 150px; }
+            .logo { max-width: 100px; }
+            .special-item { min-width: 200px; }
+            .map-container { height: 150px; }
         }
     </style>
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Persis Indian Grill Logo" class="logo">
-        <h1>🍛 Persis Indian Grill 🍛</h1>
-        <p>Authentic Flavors of India</p>
+        <div class="header-content">
+            <img src="logo.png" alt="Persis Indian Grill Logo" class="logo">
+            <div class="header-text">
+                <h1>🍛 Persis Indian Grill 🍛</h1>
+                <p>Authentic Flavors of India</p>
+            </div>
+        </div>
+        <div class="social-links">
+            <a href="https://www.facebook.com/persisstl/" class="social-link" target="_blank" aria-label="Facebook">📘</a>
+            <a href="https://www.instagram.com/persisstl/" class="social-link" target="_blank" aria-label="Instagram">📷</a>
+        </div>
     </header>
 
     <!-- Highlight section: Content loaded from data.json -->
@@ -189,6 +261,9 @@
         <div class="location">
             <h3>🏠 O'Fallon Location</h3>
             <p>1617 Bryan Rd<br>O'Fallon, MO 63368<br>(636) 294-0908</p>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3259.99!2d-90.698!3d38.796!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b5f4f4f4f4f4%3A0x1234567890abcdef!2s1617%20Bryan%20Rd%2C%20O%27Fallon%2C%20MO%2063368!5e0!3m2!1sen!2sus!4v1727990000000" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
             <a href="https://www.clover.com/online-ordering/persis-indian-grill-ofallon#W1VT1YV1EH414" class="ordering-link" target="_blank">Order Online Now</a>
             <div class="delivery-links">
                 <a href="https://www.doordash.com/store/persis-indian-grill-23074750/" class="delivery-btn" target="_blank">DoorDash</a>
@@ -205,6 +280,9 @@
         <div class="location">
             <h3>🏠 Ballwin Location</h3>
             <p>Coming Soon!<br>Ballwin, MO<br>Stay tuned for opening details!</p>
+            <div class="map-container">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10000!2d-90.55!3d38.58!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87d8b0f0f0f0f0f0%3A0x0!2sBallwin%2C%20MO!5e0!3m2!1sen!2sus!4v1727990000000" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
             <a href="#" class="ordering-link" onclick="alert('Square ordering link coming soon!')">Order Online (Coming Soon)</a>
             <div class="delivery-links">
                 <a href="#" class="delivery-btn" onclick="alert('DoorDash coming soon!')">DoorDash (Coming Soon)</a>
@@ -221,7 +299,7 @@
 
     <div class="specials">
         <h2>🍲 Weekly Specials 🍲</h2>
-        <!-- Dynamic content will be inserted here -->
+        <!-- Dynamic content will be inserted here (duplicated for seamless auto-scroll) -->
         <div id="specials-content" class="specials-content">
             <!-- Specials loaded from data.json -->
         </div>
@@ -237,7 +315,7 @@
     </footer>
 
     <script>
-        // Simple JS to load content from data.json
+        // Simple JS to load content from data.json and duplicate for seamless auto-scroll
         // Create a file called 'data.json' in the same folder with this structure:
         // {
         //   "highlight": {
@@ -270,13 +348,13 @@
                     <p>${data.highlight.text}</p>
                 `;
 
-                // Update specials section
-                const specialsContainer = document.getElementById('specials-content');
-                specialsContainer.innerHTML = data.specials.map(special => `
+                // Update specials section: Duplicate items for seamless loop
+                const specials = data.specials.map(special => `
                     <div class="special-item">
                         <p><strong>${special.title}:</strong> ${special.description}</p>
                     </div>
                 `).join('');
+                document.getElementById('specials-content').innerHTML = specials + specials; // Duplicate for infinite scroll
             })
             .catch(error => {
                 console.error('Error loading data:', error);
@@ -285,17 +363,18 @@
                     <h2>🌟 Proudly Located in 2 Amazing Spots! 🌟</h2>
                     <p>Experience the best of Indian cuisine at our O'Fallon and Ballwin locations. Fresh, flavorful, and full of tradition!</p>
                 `;
-                document.getElementById('specials-content').innerHTML = `
+                const fallbackSpecials = `
                     <div class="special-item">
-                        <p><strong>This Week's Highlight:</strong> Butter Chicken Special - Only $12.99! Served with naan and rice.</p>
+                        <p><strong>Butter Chicken Special:</strong> Only $12.99! Served with naan and rice.</p>
                     </div>
                     <div class="special-item">
-                        <p>Don't miss our Biryani Night every Wednesday - $3 off all biryanis!</p>
+                        <p><strong>Biryani Night:</strong> Every Wednesday - $3 off all biryanis!</p>
                     </div>
                     <div class="special-item">
-                        <p>Sunday Lunch Buffet: $14.99 - Unlimited authentic Indian delights.</p>
+                        <p><strong>Sunday Lunch Buffet:</strong> $14.99 - Unlimited authentic Indian delights.</p>
                     </div>
                 `;
+                document.getElementById('specials-content').innerHTML = fallbackSpecials + fallbackSpecials; // Duplicate
             });
     </script>
 </body>
